--- a/angular/src/app/adminlogin/adminlogin.component.html
+++ b/angular/src/app/adminlogin/adminlogin.component.html
@@ -8,18 +8,22 @@
           <hr class="hr-or">
         </div>
         <h4>Administrator</h4>
+        <h1>{{response}}</h1>
   
         <form role="form" #logadmin = "ngForm" (ngSubmit) = "onClickSubmit(logadmin)">
           <div class="form-group">
-            <label for="inputUsernameEmail">Username</label>
-            <input type="text" #username="ngModel" ngModel class="form-control" id="inputUsernameEmail">
+            <label for="username">Username</label>
+            <input type="text" name="userName" #username="ngModel" ngModel class="form-control" required>
+            <!-- <input [(ngModel)]="person.firstName" name="first"> -->
           </div>
           <div class="form-group">
-            <label for="inputPassword">Password</label>
-            <input type="password" #password="ngModel" ngModel class="form-control" id="inputPassword">
+            <label for="password">Password</label>
+            <input type="password" name="password" #password="ngModel" ngModel class="form-control" required>
           </div>
+          <ngb-alert #selfClosingAlert *ngIf="successMessage" type="danger" (closed)="successMessage = ''">{{ successMessage }}
+          </ngb-alert>
           <button type="submit" class="btn btn btn-primary">
-            Log In
+            Log In 
           </button>
         </form>
       
